--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -32,12 +32,12 @@ tests_config:
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
-#  class: TestClientsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
+  class: TestClientsModuleUI
+  tests:
 #    - test_clients_searching_columns_ui
-#    - test_mass_assign_clients_ui
-#    - test_mass_edit_clients_ui
+    - test_mass_assign_clients_ui
+    - test_mass_edit_clients_ui
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
 #  class: TestClientDetailsUI
@@ -106,7 +106,7 @@ tests_config:
 #    - test_tasks_email_ui
 
 ########################################### USER MANAGEMENT ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
-  class: TestUserManagementUI
-  tests:
-    - test_create_user_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
+#  class: TestUserManagementUI
+#  tests:
+#    - test_create_user_ui
