--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -21,14 +21,15 @@ tests_config:
 #    - test_filter_ta_ui
 
 ########################################## LEADS ###################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-#  directive: reload_configuration
-#  class: TestLeadsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  directive: reload_configuration
+  class: TestLeadsModuleUI
+  tests:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
+    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
@@ -106,8 +107,8 @@ tests_config:
 #    - test_tasks_email_ui
 
 ########################################### USER MANAGEMENT ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
-  class: TestUserManagementUI
-  tests:
-    - test_create_user_ui
-    - test_delete_user_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
+#  class: TestUserManagementUI
+#  tests:
+#    - test_create_user_ui
+#    - test_delete_user_ui
