--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -68,8 +68,8 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
@@ -88,6 +88,9 @@ brands:
 
 #- name: olympiusglobal
 #  config_file: olympiusglobal.yml
+
+- name: ofcmarkets
+  config_file: ofcmarkets.yml
 
 #- name: proconsultinginvest
 #  config_file: proconsultinginvest.yml
