--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -28,8 +28,8 @@ tests_config:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
-    - test_edit_lead_ui
-#    - test_edit_pencil_lead_ui
+#    - test_edit_lead_ui
+    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
@@ -60,7 +60,7 @@ tests_config:
 #    - test_transfer_crm_ui
 
 ######################################## AFFILIATES MODULE ##########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.Test_Affiliates_Module_UI
+#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.TestAffiliatesModuleUI
 #  class: TestAffiliateModuleUI
 #  tests:
 #     - test_create_delete_affiliate_ui
@@ -109,6 +109,13 @@ tests_config:
 ########################################### USER MANAGEMENT ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
 #  class: TestUserManagementUI
+#  tests:
+#    - test_create_user_ui
+#    - test_delete_user_ui
+
+############################################## WORKFLOWS #############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestWorkflowsUI
+#  class: TestWorkflowsUI
 #  tests:
 #    - test_create_user_ui
 #    - test_delete_user_ui
