--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -21,23 +21,23 @@ tests_config:
 #    - test_filter_ta_ui
 
 ########################################## LEADS ###################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-  directive: reload_configuration
-  class: TestLeadsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+#  directive: reload_configuration
+#  class: TestLeadsModuleUI
+#  tests:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
-    - test_edit_pencil_lead_ui
+#    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
-#  class: TestClientsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
+  class: TestClientsModuleUI
+  tests:
 #    - test_clients_searching_columns_ui
-#    - test_mass_assign_clients_ui
+    - test_mass_assign_clients_ui
 #    - test_mass_edit_clients_ui
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
@@ -114,8 +114,8 @@ tests_config:
 #    - test_delete_user_ui
 
 ############################################## WORKFLOWS #############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestWorkflowsUI
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows_ui.TestWorkflowsUI
 #  class: TestWorkflowsUI
 #  tests:
-#    - test_create_user_ui
+#    - test_create_workflow_ui
 #    - test_delete_user_ui
