--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,13 +1,16 @@
 brands:
 
+- name: forex_staging
+  config_file: forex_staging.yml
+
 #- name: gmo
 #  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
 
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 
 #- name: kaya_fx
 #  config_file: kaya_fx.yml
