--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -6,15 +6,15 @@ tests_config:
     - test_check_sign_up
 #    - test_check_login
 #    - test_check_email_sign_up
-#    - test_registred_client_exist_in_crm
+    - test_registred_client_exist_in_crm
 #
 - module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
   class: AddNewLiveAccountTestCA
   tests:
     - test_add_new_live_account_ca
-#    - test_add_new_demo_account_ca
-#    - test_check_accounts_in_crm
-#    - test_open_ticket_ca
+    - test_add_new_demo_account_ca
+    - test_check_accounts_in_crm
+    - test_open_ticket_ca
 
 #- module: src.test.python.ui.automation.implementation.ca.Trading_Process
 #  class: TradingProcess
