--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -119,3 +119,5 @@ tests_config:
   tests:
     - test_create_workflow_ui
     - test_check_workflow_by_status_ui
+    - test_check_workflow_by_country_ui
+    - test_delete_workflow_ui
