help desk tests ui

--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -70,8 +70,9 @@ tests_config:
   class: TestHelpDeskModuleUI
   tests:
     - test_create_ticket_ui   # not run: no option to select test client in 'related to' field
-#    - test_edit_ticket_ui   # not run: no option to select test client in 'related to' field
-#    - test_delete_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_edit_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_edit_pencil_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_delete_ticket_ui   # not run: no option to select test client in 'related to' field
 #    - test_help_desk_searching_columns_ui
 
 ############################################ DOCUMENTS ##############################################
