--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: itrader
 #  config_file: itrader.yml
 
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
@@ -15,5 +15,5 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-#- name: forex_staging
-#  config_file: forex_staging.yml
+- name: forex_staging
+  config_file: forex_staging.yml
