--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -10,7 +10,7 @@ tests_config:
 #    - test_sorting_columns
 #    - test_searching_by_columns
 
-######################################## FILTERS TESTS ###############################################
+######################################## FILTERS TESTS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
 #  class: TestFiltersUI
 #  tests:
@@ -20,7 +20,7 @@ tests_config:
 #    - test_filter_help_desk_ui
 #    - test_filter_ta_ui
 
-########################################## LEADS ###################################################
+############################################ LEADS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
 #  directive: reload_configuration
 #  class: TestLeadsModuleUI
@@ -32,7 +32,7 @@ tests_config:
 #    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
-############################################## CLIENTS ###############################################
+########################################### CLIENTS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
 #  class: TestClientsModuleUI
 #  tests:
@@ -46,7 +46,7 @@ tests_config:
 #    - test_edit_client_ui
 #    - test_add_interaction_ui
 
-######################################### MT4 ACTIONS ###########################################
+######################################### MT4 ACTIONS #############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
 #  directive: reload_configuration
 #  class: TestMT4UI
@@ -59,13 +59,13 @@ tests_config:
 #    - test_credit_out_crm_ui
 #    - test_transfer_crm_ui
 
-######################################## AFFILIATES MODULE ##########################################
+######################################## AFFILIATES MODULE #########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.TestAffiliatesModuleUI
 #  class: TestAffiliateModuleUI
 #  tests:
 #     - test_create_delete_affiliate_ui
 
-############################################ HELP DESK ##############################################
+############################################ HELP DESK #############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_ui.TestHelpDeskModuleUI
 #  class: TestHelpDeskModuleUI
 #  tests:
@@ -87,19 +87,19 @@ tests_config:
 #  tests:
 #    - test_trading_searching_columns_ui
 
-####################################### FINANCIAL TRANSACTIONS ##########################################
+####################################### FINANCIAL TRANSACTIONS ######################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_fin_transactions_ui.TestFinTransactionsModuleUI
 #  class: TestFinTransactionsModuleUI
 #  tests:
 #    - test_fin_transactions_searching_columns_ui
 
-############################################## AUDIT LOGS ################################################
+############################################## AUDIT LOGS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
 #  class: TestAuditLogsModuleUI
 #  tests:
 #    - test_audit_logs_searching_columns_ui
 
-############################################## TASKS ################################################
+################################################# TASKS #############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
 #  class: TestTasksModuleUI
 #  tests:
@@ -110,15 +110,21 @@ tests_config:
 #    - test_tasks_mass_edit
 #    - test_tasks_email_ui
 
-########################################### USER MANAGEMENT ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
-  class: TestUserManagementUI
-  tests:
-    - test_create_user_ui
-    - test_login_as_ui
-    - test_delete_user_ui
+############################################# USER MANAGEMENT #######################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
+#  class: TestUserManagementUI
+#  tests:
+#    - test_create_user_ui
+#    - test_login_as_ui
+#    - test_delete_user_ui
 
-############################################## WORKFLOWS #############################################
+############################################ CRM CONFIGURATION #######################################
+- module: src.test.python.ui.automation.implementation.crm.tests_crm_config_ui.TestCrmConfigurationUI
+  class: TestCrmConfigurationUI
+  tests:
+    - test_crm_config_pages_ui
+
+################################################ WORKFLOWS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_workflows_ui.TestWorkflowsUI
 #  class: TestWorkflowsUI
 #  tests:
