--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -21,17 +21,17 @@ tests_config:
 #    - test_filter_ta_ui
 
 ############################################ LEADS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-  directive: reload_configuration
-  class: TestLeadsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+#  directive: reload_configuration
+#  class: TestLeadsModuleUI
+#  tests:
 #    - test_leads_searching_columns_ui
 #    - test_leads_sorting_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
 #    - test_edit_pencil_lead_ui
-    - test_convert_lead_ui   # Creates a lead and converts it to a client
+#    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ########################################### CLIENTS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
@@ -41,10 +41,10 @@ tests_config:
 #    - test_mass_assign_clients_ui
 #    - test_mass_edit_clients_ui
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
-#  class: TestClientDetailsUI
-#  tests:
-#    - test_edit_client_ui
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
+  class: TestClientDetailsUI
+  tests:
+    - test_edit_client_ui
 #    - test_add_interaction_ui
 
 ######################################### MT4 ACTIONS #############################################
@@ -53,12 +53,12 @@ tests_config:
 #  class: TestMT4UI
 #  tests:
 #    - test_create_demo_ta_ui
-#    - test_update_mt_user_ui
 #    - test_deposit_crm_ui  # create live mt account and make deposit
 #    - test_withdraw_crm_ui
 #    - test_credit_in_crm_ui
 #    - test_credit_out_crm_ui
 #    - test_transfer_crm_ui
+#    - test_update_mt_user_ui
 
 ######################################## AFFILIATES MODULE #########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.TestAffiliatesModuleUI
