--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -40,10 +40,10 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
-#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
 #    - test_mass_assign_leads
-    - test_mass_edit_leads
+#    - test_mass_edit_leads
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
