--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -37,10 +37,10 @@ tests_config:
 #    - test_create_filter_trading_account_module
 #
 ########################################## LEADS MODULE ###################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
-  tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+#  class: TabLeadsModuleCRM
+#  tests:
+#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
 #    - test_mass_assign_leads
 #    - test_mass_edit_leads
@@ -188,13 +188,13 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ########################################## WORKFLOWS MODULE ##############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-#  class: WorkflowsModulesTest
-#  tests:
-#    - test_create_workflows
-#    - test_check_workflow_by_status
-#    - test_check_workflow_by_country
-#    - test_delete_workflow
+- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+  class: WorkflowsModulesTest
+  tests:
+    - test_create_workflows
+    - test_check_workflow_by_status
+    - test_check_workflow_by_country
+    - test_delete_workflow
 #
 ############################################ USER MANAGEMENT ############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
