--- a/src/main/python/ui/crm/model/BrandsVariables/mpcrypto_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/mpcrypto_vars.yml
@@ -1,4 +1,6 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+LoginCAPrecondition:
+  signup_currency: "BTC"
 TradingAccountPrecondition:
   demo_acc_currency: "BTC"
   initial_deposit_amount: "10"
