--- a/src/main/python/ui/crm/model/BrandsXpath/marketrip_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/marketrip_xpath.yml
@@ -1,3 +1,5 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 CALoginPage:
   login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats font-15-pandats'][contains(text(), 'Login')]"
+LoginPage:
+  login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats font-15-pandats'][contains(text(), 'Login')]"
