--- a/src/main/python/ui/crm/model/BrandsXpath/proconsultinginvest_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/proconsultinginvest_xpath.yml
@@ -1,3 +1,5 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 CALoginPage:
   check_box_accept: "//span[contains (text(), 'By checking this box')]"
+SignUpFirstStepPage:
+  check_box_accept: "//span[contains (text(), 'By checking this box')]"
