--- a/src/main/python/ui/crm/model/BrandsXpath/4ex7_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/4ex7_xpath.yml
@@ -4,3 +4,5 @@ CALoginPage:
 FinancialTransactionsPage:
   client_name_element:  "(//*[@id='listBody']//tr/td[4])[%s]"
   modified_time_element: "(//*[contains(@id,'row_')]/td[12])[%s]"
+SignUpFirstStepPage:
+  check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
