--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -124,6 +124,11 @@ LeadsModule:
   l_assign_table: "//tbody[@id = 'listBody']/tr[%s]/td[14]"
 LeadViewInfo:
   convert_lead_btn: "//a[contains(@onclick,'ConvertLead')]"
+LoginPage:
+  login_btn: "//button[contains(text(), 'Login')]"
+  login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats font-15-pandats'][contains(text(), 'Login')]"
+  login_email_input: "//input[@name='login']"
+  login_password_input: "//input[@id='forex-password']"
 MT4DepositModule:
   description_filed: "//input[@id='transaction_comment']"
   create_deposit_button: "//button[contains(text(),'Create')]"
@@ -139,6 +144,23 @@ MT4CreditOutModule:
   granted_by_filed: "//input[@id='transaction_grantedBy']"
   comment_filed: "//input[@id='transaction_comment']"
   create_button: "//button[contains(text(),'Create')]"
+SignUpFirstStepPage:
+  sign_up: "//button[contains(text(), 'Sign Up')]"
+  check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
+  client_title_name: "//span[contains(text(), '%s')]"
+  citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
+  campaign_close_btn: "(//button[@title='Close'])[2]"
+  close_payment_btn: "//div[@class='close-pandats cmicon-close4 ng-star-inserted']"
+  submit_btn: "//button[span=' Submit ']"
+  login_email_input: "//input[@name='login']"
+  login_password_input: "//input[@id='forex-password']"
+  input_first_name: "//input[@name = 'firstName']"
+  input_last_name: "//input[@name = 'lastName']"
+  input_confirm_password: "//input[@name = 'passwordConfirm']"
+  city: "//input[@name = 'city']"
+  address: "//input[@name = 'address']"
+  zip_code: "//input[@name = 'postCode']"
+  next_btn: "//button[contains (text(), 'Next')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
