--- a/src/main/python/ui/crm/model/BrandsXpath/goldenmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/goldenmarkets_xpath.yml
@@ -26,3 +26,5 @@ AffiliatePage:
   input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
 CALoginPage:
   check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
+SignUpFirstStepPage:
+  check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
