--- a/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
@@ -34,6 +34,11 @@ LeadsModule:
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
   l_status_table: "//tbody[@id = 'listBody']/tr[%s]/td[6]"
   l_assign_table: "//tbody[@id = 'listBody']/tr[%s]/td[13]"
+SignUpFirstStepPage:
+  city: "//input[@name = 'city']"
+  zip_code: "//input[@name = 'postCode']"
+  address: "//input[@name = 'address']"
+  next_btn: "//button[contains (text(), 'Next')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
