--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -29,8 +29,8 @@ brands:
 #- name: ctxprime
 #  config_file: ctxprime.yml
 
-#- name: dualix
-#  config_file: dualix.yml
+- name: dualix
+  config_file: dualix.yml
 
 #- name: etfinance
 #  config_file: etfinance.yml
@@ -95,11 +95,8 @@ brands:
 #- name: proconsultinginvest
 #  config_file: proconsultinginvest.yml
 
-#- name: ptbanc
-#  config_file: ptbanc.yml
-
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
