--- a/src/test/python/resources/config/tests_api_ui.yml
+++ b/src/test/python/resources/config/tests_api_ui.yml
@@ -4,11 +4,11 @@ tests_config:
   class: TestApiUI
   tests:
 #    - test_autorization_ui
-#    - test_create_customer_ui
+    - test_create_customer_ui
 #    - test_duplicate_customer_ui
 #    - test_read_customer_ui
 #    - test_update_customer_ui
-    - test_create_lead_ui
+#    - test_create_lead_ui
 #    - test_read_leads_ui
 #    - test_login_token_ui
 
